cluster/apps/networking/external-services/octoprint/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app octoprint-externalname
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: "${OCTOPRINT_IP}"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
